--- a/classmoja_1_1modules_1_1cbm_1_1PeatlandTurnoverModuleBase.html
+++ b/classmoja_1_1modules_1_1cbm_1_1PeatlandTurnoverModuleBase.html
@@ -376,8 +376,7 @@ Protected Attributes</h2></td></tr>
   </tr>
 </table>
 </div><div class="memdoc">
-<p>Return the carbon transfer amount <br  />
-</p>
+<p>Return the carbon transfer amount</p>
 <p>Computer pow(fabs(previousAwtd), b) and pow(fabs(currentAwtd), b) where fabs refers to the absolute value floating point value and pow refers to the power function. <br  />
 Return value of 10.0 * fabs(a * (pow(fabs(previousAwtd), b) - pow(fabs(currentAwtd), b)))</p>
 <dl class="params"><dt>Parameters</dt><dd>
